# PlantvsAi-zombitx64

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  app.py  game_stats.json  neural_network.py  package-lock.json  package.json  pattern_recognition.py  player_patterns.json  pyproject.toml  pytest.ini  q_learning.py  requirements-dev.txt  requirements.txt  setup.py  tailwind.config.js  test_poker.py  tictactoe.py  train_poker.py  train_poker_model.py  tsconfig.json  vercel.json
algorithm/: deep_q_network.py  genetic_algorithm.py  mcts.py  pattern_recognition.py
docs/: README.md
docs/api/: poker_api.md
docs/architecture/: poker_architecture.md
game/: __init__.py  checkers.py  chess.py  connect_four.py  poker.py  poker_data_generator.py  poker_model.py  tictactoe.py
src/PlantvsAi_zombitx64/game/: chess.py  connect_four.py  game_settings.py  huggingface_poker.py  poker.py  poker_data_generator.py  poker_model.py  reinforcement_poker_model.py  tictactoe.py  train_gui.py  train_poker_model.py  train_reinforcement_poker.py
static/: checkers.js  chess.js  connect_four.js  poker-styles.css  poker.js  tictactoe.js
static/css/: styles.css
static/js/: checkers.js  checkers.ts  connect_four.ts  main.ts  tictactoe.ts
static/sounds/: info.md
templates/: checkers.html  chess.html  connect_four.html  index.html  poker.html  tictactoe.html
